# our-gpus

./: .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile.api  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  extract_hosts.py  hosts_and_ports.txt  package.json  pyproject.toml  requirements.txt  ruff.toml  scan_test_enhanced.py  seed_data.py  test_hosts.txt
.github/workflows/: ci.yml
app/: aco.py  cidr_split.py  config.py  config_test.py  db.py  db_test.py  excludes.conf  excludes.generated.conf  geocode.py  ingest.py  lead_routes.py  lead_schemas.py  lead_services.py  main.py  masscan.py  masscan_aco.py  openplanner_sync.py  probe.py  schemas.py  shodan_queries.py
app/migrations/: env.py
app/migrations/versions/: 20260331_000001_add_lead_enrichment_pipeline_tables.py
cli/: ingest_json.py  migrate_sqlite_to_postgres.py  refresh_dynamic_excludes.py  rescan_hosts.py  sync_to_openplanner.py  sync_to_proxx.py
database/: schema.sql
docs/: openplanner-integration.md
scripts/: seed_sample.py
services/api-gateway/: Dockerfile  package.json  tsconfig.json
services/api-gateway/src/: config.ts  server.ts
services/api-gateway/src/database/: setup.ts
services/api-gateway/src/middleware/: errorHandler.ts
services/api-gateway/src/routes/: hosts.ts  instances.ts  scan.ts  search.ts  stats.ts  upload.ts
services/api-gateway/src/utils/: logger.ts
services/frontend/: Dockerfile  package.json
services/json-processor/: Dockerfile  package.json  tsconfig.json
services/json-processor/src/: logger.ts  server.ts
services/ollama-scanner/: Dockerfile  app.py  requirements.txt
services/probe-sidecar/: Dockerfile  package-lock.json  package.json
services/probe-sidecar/src/: server.ts
specs/: admin-page-layout.md  command-center-ui.md  discovery-strategies.md  entity-graph-contract.md  evidence-ledger-surface.md  exclusions-surface.md  leads-management.md  observation-schema.md  policy-engine.md  safety-model.md  shodan-strategy.md  ui-tactical-theme.md  vision.md  wireguard-connect-strategy.md  workflow-engine.md
tests/: conftest.py  conftest.py.rej  test_aco.py  test_api.py  test_db_schema_compat.py  test_geocode.py  test_groups_and_filters.py  test_ingest.py  test_lead_routes.py  test_lead_schemas.py  test_openplanner_sync.py  test_performance.py  test_probe.py  test_scan_strategies.py  test_shodan_queries.py  test_workflows.py
web/: Dockerfile  index.html  package-lock.json  package.json  server.mjs  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: FieldMapper.tsx  Layout.tsx  ProgressBar.tsx  ScannerWorkbench.tsx  ScannerWorldMap.tsx
web/src/components/admin/: AdminUnlockPanel.tsx  CurrentWorkflowCard.tsx  EvidenceLedger.tsx  ExclusionsPanel.tsx  HostGroupsPanel.tsx  JobsPanel.tsx  LiveLogsCard.tsx  OverviewGrid.tsx  ProbeSnapshotCard.tsx  WorkflowDetailPanel.tsx  WorkflowHistoryPanel.tsx  WorkflowListPanel.tsx  WorkflowRail.tsx  format.ts  types.ts
web/src/components/leads/: types.ts
web/src/contexts/: DarkModeContext.tsx
web/src/pages/: Admin.tsx  Explore.tsx  HostDetail.tsx  Leads.tsx  Upload.tsx
worker/: celery_app.py  tasks.py
