[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
# Clean up test database files after test runs
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:fastapi.*",
]

[tool.coverage.run]
source = ["app", "worker"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[project]
name = "ollama-discovery"
version = "1.0.0"
description = "Ollama Discovery & Catalog Platform"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "sqlmodel==0.0.19",
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
    "psycopg[binary]==3.2.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "httpx==0.27.0",
    "celery[redis]==5.4.0",
    "redis==5.0.7",
    "geoip2fast==1.2.2",
    "python-multipart==0.0.18",
    "ijson==3.3.0",
    "aiofiles==24.1.0",
    "prometheus-client==0.20.0",
    "python-dotenv==1.0.1",
    "PyJWT==2.9.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "pytest-cov==5.0.0",
    "ruff>=0.5.0",
]
